Attempt to fix icon overlap for datatables

--- a/public/assets/less/datatables.less
+++ b/public/assets/less/datatables.less
@@ -15,7 +15,7 @@ th {
 
 table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled {
     background-repeat: no-repeat;
-    background-position: center right;
+    background-position: center right -5px;
 }
 
 table.dataTable thead .sorting_asc {
